# sdkwork-knowledgebase

./: .env.postgres.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json
crates/sdkwork-api-knowledgebase-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-knowledgebase-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-knowledgebase-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-intelligence-knowledgebase-repository-sqlx/: Cargo.toml  README.md
crates/sdkwork-intelligence-knowledgebase-repository-sqlx/specs/: README.md  component.spec.json
crates/sdkwork-intelligence-knowledgebase-repository-sqlx/src/: agent_profile_store.rs  audit_event_store.rs  binding_scope_filters.rs  browser_projection_store.rs  chunk_transaction.rs  drive_import_linkage_snapshot.rs  drive_object_ref_store.rs  embedding_store.rs  id.rs  index_store.rs  keyword_search.rs  lib.rs  migrations.rs  okf_candidate_store.rs  okf_concept_link_store.rs  okf_concept_store.rs  pgvector_layered_retrieval.rs  postgres_pgvector_retrieval.rs  provider_binding_readiness_store.rs  provider_binding_store.rs  provider_migration_store.rs  quota_transaction.rs  retrieval_profile_store.rs  retrieval_store.rs  site_store.rs  sqlite_chunk_store.rs  sqlite_commerce_store.rs  sqlite_context_binding_store.rs  sqlite_drive_import_metadata_store.rs  sqlite_group_space_binding_store.rs  sqlite_import_stores.rs  sqlite_knowledge_document_metadata_transaction.rs  sqlite_markdown_index_metadata_store.rs  sqlite_okf_candidate_transaction.rs  sqlite_okf_concept_revision_metadata_store.rs  sqlite_okf_concept_transaction.rs  sqlite_outbox_store.rs  sqlite_space_stores.rs  wiki_page_store.rs
crates/sdkwork-intelligence-knowledgebase-repository-sqlx/tests/: migration_manifest.rs  postgres_optional_integration.rs  provider_binding_readiness_postgres_optional.rs  provider_binding_readiness_store.rs  provider_binding_store.rs  provider_migration_store.rs  runtime_id_generation.rs  sqlite_agent_profile_store.rs  sqlite_browser_projection.rs  sqlite_context_binding_store.rs  sqlite_document_pagination.rs  sqlite_document_version_store.rs  sqlite_drive_import_repositories.rs  sqlite_drive_object_ref_store.rs  sqlite_embedding_batch.rs  sqlite_group_space_security.rs  sqlite_lifecycle_bootstrap.rs  sqlite_okf_candidate_store.rs  sqlite_okf_concept_store.rs  sqlite_outbox_store.rs  sqlite_rag_config_stores.rs  sqlite_retrieval_store.rs  sqlite_source_connector_metadata.rs  sqlite_space_repositories.rs  sqlite_wiki_page_store.rs  wiki_persistence_store.rs  wiki_public_provider_store.rs  wiki_publication_lifecycle_store.rs
crates/sdkwork-intelligence-knowledgebase-rpc/: Cargo.toml
crates/sdkwork-intelligence-knowledgebase-rpc-bin/: Cargo.toml
crates/sdkwork-intelligence-knowledgebase-rpc-bin/specs/: component.spec.json
crates/sdkwork-intelligence-knowledgebase-rpc-bin/src/: bootstrap.rs  config.rs  lib.rs  runtime.rs
crates/sdkwork-intelligence-knowledgebase-rpc/specs/: component.spec.json
crates/sdkwork-intelligence-knowledgebase-rpc/src/: context.rs  error.rs  lib.rs  mapper.rs  runtime.rs  service.rs
crates/sdkwork-intelligence-knowledgebase-service/: Cargo.toml  README.md
crates/sdkwork-intelligence-knowledgebase-service/specs/: README.md  component.spec.json
crates/sdkwork-intelligence-knowledgebase-service/src/: agent.rs  agent_chat.rs  bounded_blocking.rs  bounded_http_body.rs  browser.rs  context_binding.rs  embedding_retrieval_backend.rs  group_launch.rs  group_space.rs  group_space_access.rs  knowledge_embedding_build.rs  knowledge_embedding_index.rs  lib.rs  mirror.rs  provider_binding.rs  provider_migration.rs  public_web_search.rs  retrieval.rs  space.rs  tenant_quota.rs  wiki_backfill.rs  wiki_event_consumer.rs  wiki_event_delivery.rs  wiki_initialization.rs  wiki_public_provider.rs  wiki_publication_lifecycle.rs  wiki_representation.rs  wiki_source_processor.rs
crates/sdkwork-intelligence-knowledgebase-service/tests/: agent_service.rs  api_markdown_ingest_pipeline.rs  api_payload_ingest_service.rs  drive_boundary.rs  drive_import_service.rs  ingestion_service.rs  knowledge_browser_service.rs  knowledge_engine_catalog.rs  knowledge_engine_kernel_bridge.rs  knowledge_engine_native.rs  knowledge_engine_registry.rs  knowledge_engine_space_resolver.rs  llm_wiki_renderers.rs  local_mirror_manifest_service.rs  okf_bundle_file_registry.rs  (+14 more)
crates/sdkwork-knowledgebase-agent-provider/: Cargo.toml  README.md
crates/sdkwork-knowledgebase-api-server/: Cargo.toml
crates/sdkwork-knowledgebase-contract/: Cargo.toml  README.md
crates/sdkwork-knowledgebase-contract-tests/: Cargo.toml
crates/sdkwork-knowledgebase-database-host/: Cargo.toml
crates/sdkwork-knowledgebase-drive/: Cargo.toml  README.md
crates/sdkwork-knowledgebase-engine-anythingllm/: Cargo.toml
crates/sdkwork-knowledgebase-engine-chroma/: Cargo.toml
crates/sdkwork-knowledgebase-engine-flowise/: Cargo.toml
crates/sdkwork-knowledgebase-engine-ragflow/: Cargo.toml
crates/sdkwork-knowledgebase-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-knowledgebase-im-rpc-adapter/: Cargo.toml
crates/sdkwork-knowledgebase-memory/: Cargo.toml  README.md
crates/sdkwork-knowledgebase-observability/: Cargo.toml
crates/sdkwork-knowledgebase-provider-runtime/: Cargo.toml  README.md
crates/sdkwork-knowledgebase-provider-secret-adapter/: Cargo.toml
crates/sdkwork-knowledgebase-standalone-gateway/: Cargo.toml
crates/sdkwork-knowledgebase-test-support/: Cargo.toml  README.md
crates/sdkwork-knowledgebase-worker/: Cargo.toml
crates/sdkwork-router-knowledgebase-app-api/: Cargo.toml  README.md
crates/sdkwork-router-knowledgebase-backend-api/: Cargo.toml  README.md
crates/sdkwork-router-knowledgebase-open-api/: Cargo.toml  README.md
crates/sdkwork-routes-knowledgebase-app-api/: Cargo.toml  README.md
crates/sdkwork-routes-knowledgebase-backend-api/: Cargo.toml  README.md
(+1091 files in other folders)
