[workspace]
members = [
    "crates/sdkwork-knowledgebase-contract",
    "crates/sdkwork-knowledgebase-agent-provider",
    "crates/sdkwork-intelligence-knowledgebase-object-key-service",
    "crates/sdkwork-knowledgebase-drive",
    "crates/sdkwork-knowledgebase-memory",
    "crates/sdkwork-knowledgebase-test-support",
    "crates/sdkwork-router-knowledgebase-app-api",
    "crates/sdkwork-router-knowledgebase-open-api",
    "crates/sdkwork-router-knowledgebase-backend-api",
    "crates/sdkwork-intelligence-knowledgebase-service",
    "crates/sdkwork-intelligence-knowledgebase-repository-sqlx",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["serde", "v4"] }

sdkwork-knowledgebase-contract = { path = "crates/sdkwork-knowledgebase-contract" }
sdkwork-knowledgebase-agent-provider = { path = "crates/sdkwork-knowledgebase-agent-provider" }
sdkwork-intelligence-knowledgebase-object-key-service = { path = "crates/sdkwork-intelligence-knowledgebase-object-key-service" }
sdkwork-knowledgebase-memory = { path = "crates/sdkwork-knowledgebase-memory" }
sdkwork-knowledgebase-test-support = { path = "crates/sdkwork-knowledgebase-test-support" }
sdkwork-intelligence-knowledgebase-service = { path = "crates/sdkwork-intelligence-knowledgebase-service" }
sdkwork-intelligence-knowledgebase-repository-sqlx = { path = "crates/sdkwork-intelligence-knowledgebase-repository-sqlx" }

# Local workspace dependency. This keeps sdkwork-drive as the only lower-level
# storage provider and prevents knowledgebase service crates from using object
# storage SDKs directly.
sdkwork-drive-storage-contract = { path = "../sdkwork-drive/crates/sdkwork-drive-storage-contract" }

# SDKWork workspace members - declared once at workspace root
sdkwork-knowledgebase-drive = { path = "crates/sdkwork-knowledgebase-drive" }
sdkwork-drive-workspace-service = { path = "../sdkwork-drive/crates/sdkwork-drive-workspace-service" }
sdkwork-drive-config = { path = "../sdkwork-drive/crates/sdkwork-drive-config" }
sdkwork-memory-spi = { path = "../sdkwork-memory/crates/sdkwork-memory-spi" }
sdkwork_platform_id_service = { package = "sdkwork-platform-id-service", path = "../sdkwork-appbase/crates/sdkwork-platform-id-service" }
sdkwork-agent-kernel = { path = "../sdkwork-kernel/sdkwork-agent-kernel" }
