[package]
name = "sdkwork-intelligence-knowledgebase-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sdkwork-pool-config = { path = "../../../sdkwork-pool/crates/sdkwork-pool-config" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }
time.workspace = true
sdkwork-knowledgebase-contract.workspace = true
sdkwork-intelligence-knowledgebase-service.workspace = true
sdkwork_platform_id_service.workspace = true
uuid.workspace = true

[dev-dependencies]
sdkwork-knowledgebase-test-support.workspace = true
tokio.workspace = true
