[package]
name = "sdkwork-intelligence-knowledgebase-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-database-repository.workspace = true
sdkwork-knowledgebase-database-host.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "any", "migrate"] }
time.workspace = true
sdkwork-knowledgebase-contract.workspace = true
sdkwork-knowledgebase-agent-provider.workspace = true
sdkwork-intelligence-knowledgebase-service.workspace = true
sdkwork-id-core = { path = "../../../sdkwork-id/crates/sdkwork-id-core" }
sdkwork-utils-rust.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = "0.1"
uuid.workspace = true
thiserror.workspace = true

[dev-dependencies]
sdkwork-knowledgebase-test-support.workspace = true
tokio.workspace = true
