[package]
name = "sdkwork-intelligence-knowledgebase-rpc-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone internal RPC host for Knowledgebase group lifecycle operations."

[lib]
name = "sdkwork_intelligence_knowledgebase_rpc_bin"
path = "src/lib.rs"

[[bin]]
name = "sdkwork-intelligence-knowledgebase-rpc-bin"
path = "src/bin/rpc_main.rs"

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["signal", "time"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-health = "0.14"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "any", "migrate"] }
sdkwork-drive-storage-local.workspace = true
sdkwork-database-config.workspace = true
sdkwork-intelligence-knowledgebase-repository-sqlx.workspace = true
sdkwork-intelligence-knowledgebase-rpc.workspace = true
sdkwork-intelligence-knowledgebase-service.workspace = true
sdkwork-knowledgebase-contract.workspace = true
sdkwork-knowledgebase-drive.workspace = true
sdkwork-knowledgebase-rpc-sdk-rust.workspace = true
sdkwork-rpc-core.workspace = true
sdkwork-rpc-server.workspace = true
sdkwork-utils-rust.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
