[package]
name = "sdkwork-intelligence-knowledgebase-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
clawrouter-open-sdk.workspace = true
sdkwork-agent-kernel.workspace = true
sdkwork-agent-plugin-rig.workspace = true
sdkwork-agent-plugin-core.workspace = true
sdkwork-knowledgebase-agent-provider.workspace = true
sdkwork-knowledgebase-contract.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
[dev-dependencies]
tokio.workspace = true
