[package]
name = "sdkwork-intelligence-knowledgebase-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
clawrouter-open-sdk.workspace = true
sdkwork-agent-kernel.workspace = true
sdkwork-agent-plugin-rig.workspace = true
sdkwork-agent-plugin-core.workspace = true
sdkwork-knowledgebase-agent-provider.workspace = true
sdkwork-knowledgebase-contract.workspace = true
sdkwork-knowledgebase-observability.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sdkwork-utils-rust.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = "0.1"
uuid.workspace = true
reqwest.workspace = true
urlencoding = "2"

[dev-dependencies]
tokio.workspace = true
sdkwork-knowledgebase-engine-dify.workspace = true
sdkwork-knowledgebase-engine-ragflow.workspace = true
