[package]
name = "sdkwork-knowledgebase-agent-provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clawrouter-open-sdk.workspace = true
sdkwork-agent-kernel.workspace = true
sdkwork-agent-plugin-core.workspace = true
sdkwork-agent-plugin-rig.workspace = true
sdkwork-knowledgebase-contract.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt"] }
