[package]
name = "sdkwork-knowledgebase-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
sdkwork-router-knowledgebase-app-api = { path = "../sdkwork-router-knowledgebase-app-api" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sdkwork-knowledgebase-observability = { path = "../sdkwork-knowledgebase-observability" }

[[bin]]
name = "sdkwork-knowledgebase-app-api"
path = "src/bin/app_main.rs"

[[bin]]
name = "sdkwork-knowledgebase-backend-api"
path = "src/bin/backend_main.rs"

[[bin]]
name = "sdkwork-knowledgebase-open-api"
path = "src/bin/open_main.rs"
