[package]
name = "sdkwork-knowledgebase-contract"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true
sdkwork-utils-rust.workspace = true
http = "1"

[dev-dependencies]
serde_json.workspace = true
