[package]
name = "sdkwork-knowledgebase-database-host"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "SDKWork Knowledgebase database lifecycle bootstrap."

[lib]
name = "sdkwork_knowledgebase_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15"
sdkwork-database-config = { workspace = true }
sdkwork-database-lifecycle = { workspace = true }
sdkwork-database-spi = { workspace = true }
sdkwork-database-sqlx = { workspace = true }
