[package]
name = "sdkwork-knowledgebase-drive"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
sdkwork-drive-product.workspace = true
sdkwork-drive-storage-contract.workspace = true
sdkwork-knowledgebase-contract.workspace = true
sdkwork-knowledgebase-product.workspace = true
sha2.workspace = true
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "any"] }
thiserror.workspace = true

[dev-dependencies]
sdkwork-drive-config.workspace = true
tokio.workspace = true
