[package]
name = "sdkwork-knowledgebase-drive"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
sdkwork-drive-workspace-service.workspace = true
sdkwork-drive-config.workspace = true
sdkwork-drive-storage-contract.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-intelligence-knowledgebase-service.workspace = true
sdkwork-utils-rust.workspace = true
uuid.workspace = true
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "any"] }

[dev-dependencies]
sdkwork-drive-config.workspace = true
tokio.workspace = true
