[package]
name = "sdkwork-knowledgebase-engine-chroma"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Chroma external knowledge engine adapter (adapter tier) for SDKWork Knowledgebase SPI"

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-intelligence-knowledgebase-service.workspace = true
sdkwork-knowledgebase-contract.workspace = true
sdkwork-knowledgebase-provider-runtime.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
