[package]
name = "sdkwork-knowledgebase-engine-ragflow"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RAGFlow external knowledge engine adapter (adapter tier) for SDKWork Knowledgebase SPI"

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-intelligence-knowledgebase-service.workspace = true
sdkwork-knowledgebase-contract.workspace = true
sdkwork-knowledgebase-provider-runtime.workspace = true
zeroize.workspace = true

[dev-dependencies]
sdkwork-knowledgebase-test-support.workspace = true
tokio.workspace = true
wiremock.workspace = true
