[package]
name = "sdkwork-knowledgebase-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-knowledgebase application HTTP plane."

[lib]
name = "sdkwork_knowledgebase_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork-web-bootstrap.workspace = true
sdkwork-routes-knowledgebase-app-api.workspace = true
sdkwork-routes-knowledgebase-backend-api.workspace = true
sdkwork-routes-knowledgebase-open-api.workspace = true
sdkwork_iam_gateway_assembly.workspace = true
sdkwork_iam_database_host.workspace = true
sdkwork-database-config.workspace = true
sdkwork-utils-rust.workspace = true
