[package]
name = "sdkwork-knowledgebase-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
sdkwork-knowledgebase-contract.workspace = true
sdkwork-intelligence-knowledgebase-service.workspace = true
sdkwork-memory-spi.workspace = true

[dev-dependencies]
tokio.workspace = true
