[package]
name = "sdkwork-knowledgebase-observability"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
http = "1"
tokio = { workspace = true, features = ["sync"] }
tower.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
